# service/src/main/resources/api.yml
@@ -28,10 +28,26 @@ paths:
                 $ref: '#/components/schemas/RoomDTO'
         404:
           description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ResponseError'
+
+
+    delete:
+      summary: 'Deletes a room by ID'
+      operationId: deleteRoom
+      tags:
+        - room
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the room
+          schema:
+            type: integer
+            format: int64
+      responses:
+        204:
+          description: 'Deleted Successfully'
+        404:
+          description: Not Found
 
   /rooms:
     post:
@@ -97,4 +113,4 @@ components:
           schema:
             type: array
             items:
-              $ref: '#components/schemas/ResponseError'
+              $ref: '#/components/schemas/ResponseError'
